--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://drive.google.com/file/d/1DRUK8wQH1xJ5A_ro7eYvGEHWBpng0mSD/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/1DRUK8wQH1xJ5A_ro7eYvGEHWBpng0mSD?autoplay=1" width="640" height="480" allow="autoplay " fullscreen" allowfullscreen></iframe>
 </body>
 </html>
